--- a/FXExperienceTools/src/main/resources/fxml/FXMLGradientPanel.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLGradientPanel.fxml
@@ -3,11 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -15,67 +11,42 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 
-<fx:root prefHeight="500.0" prefWidth="800.0" styleClass="split-pane-main" stylesheets="@../styles/gradient_panel.css" type="SplitPane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
-   <items>
-      <AnchorPane maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: transparent;">
+
+<fx:root id="Gradient-Panel" fx:id="gridPane" alignment="CENTER" stylesheets="@../styles/gradient_panel.css" type="GridPane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+   <columnConstraints>
+      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="NEVER" minWidth="-Infinity" prefWidth="230.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
+      <RowConstraints minHeight="-Infinity" prefHeight="25.0" vgrow="SOMETIMES" />
+      <RowConstraints vgrow="NEVER" />
+      <RowConstraints prefHeight="50.0" vgrow="NEVER" />
+      <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="90.0" vgrow="NEVER" />
+      <RowConstraints prefHeight="20.0" vgrow="NEVER" />
+      <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="130.0" vgrow="NEVER" />
+      <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
+      <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="ALWAYS" />
+      <RowConstraints vgrow="NEVER" />
+   </rowConstraints>
+   <children>
+      <HBox alignment="CENTER" spacing="5.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
          <children>
-            <GridPane fx:id="gridPane" alignment="CENTER" maxWidth="1.7976931348623157E308" styleClass="main-grid" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <columnConstraints>
-                  <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="225.0" />
-                  <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="140.0" />
-                  <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="140.0" />
-                  <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="225.0" />
-                  <ColumnConstraints />
-                  <ColumnConstraints />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="100.0" vgrow="ALWAYS" />
-                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="40.0" vgrow="ALWAYS" />
-                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="40.0" vgrow="ALWAYS" />
-                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="40.0" vgrow="ALWAYS" />
-                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="40.0" vgrow="ALWAYS" />
-                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="102.0" vgrow="ALWAYS" />
-                  <RowConstraints />
-               </rowConstraints>
-               <padding>
-                  <Insets left="5.0" right="5.0" />
-               </padding>
-               <children>
-                  <HBox alignment="CENTER" spacing="20.0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.rowSpan="4" GridPane.vgrow="ALWAYS">
-                     <children>
-                        <Rectangle fx:id="gradientSquare" arcHeight="20.0" arcWidth="20.0" fill="DODGERBLUE" height="80.0" stroke="TRANSPARENT" strokeType="INSIDE" styleClass="gradient-shape" width="100.0" HBox.hgrow="ALWAYS" />
-                        <Button fx:id="fxButton" contentDisplay="BOTTOM" mnemonicParsing="false" prefHeight="200.0" prefWidth="160.0" styleClass="gradient-object" text="fx experience" HBox.hgrow="ALWAYS">
-                           <graphic>
-                              <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../images/fxexperience-logo.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Button>
-                        <Circle fx:id="gradientCircle" fill="#6b7b8a" radius="50.0" stroke="#b85c5c00" strokeType="INSIDE" styleClass="gradient-shape" HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
-                  <TextArea fx:id="gradientCSSText" maxHeight="-Infinity" prefHeight="175.0" prefWidth="570.0" styleClass="gradient-text-area" wrapText="true" GridPane.columnSpan="4" GridPane.rowIndex="7" GridPane.rowSpan="3">
-                     <GridPane.margin>
-                        <Insets left="5.0" right="5.0" />
-                     </GridPane.margin>
-                  </TextArea>
-                  <Label text="Gradient CSS:" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="6">
-                     <padding>
-                        <Insets left="10.0" />
-                     </padding>
-                     <GridPane.margin>
-                        <Insets top="15.0" />
-                     </GridPane.margin>
-                  </Label>
-               </children>
-            </GridPane>
+            <TextArea fx:id="gradientCSSText" maxHeight="-Infinity" prefHeight="175.0" prefWidth="570.0" styleClass="gradient-text-area" wrapText="true" />
          </children>
-      </AnchorPane>
-   </items>
+      </HBox>
+      <HBox alignment="CENTER" spacing="20.0" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="4">
+         <children>
+            <Rectangle fx:id="gradientSquare" arcHeight="20.0" arcWidth="20.0" fill="DODGERBLUE" height="80.0" stroke="TRANSPARENT" strokeType="INSIDE" styleClass="gradient-shape" width="100.0" HBox.hgrow="ALWAYS" />
+            <Button fx:id="fxButton" contentDisplay="BOTTOM" mnemonicParsing="false" prefHeight="200.0" prefWidth="300.0" styleClass="gradient-object" HBox.hgrow="ALWAYS" />
+            <Circle fx:id="gradientCircle" fill="#6b7b8a" radius="50.0" stroke="#b85c5c00" strokeType="INSIDE" styleClass="gradient-shape" HBox.hgrow="ALWAYS" />
+         </children>
+      </HBox>
+      <Label styleClass="gradient-label" text="Gradient" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+   </children>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="36.0" />
+   </padding>
 </fx:root>
