--- a/FXExperienceTools/src/main/resources/styles/derivation.css
+++ b/FXExperienceTools/src/main/resources/styles/derivation.css
@@ -11,17 +11,26 @@ different terms and without source code for the larger work.
     Author     : andje22
 */
 .root {
-    -fe-body-background: #31363B;
-    -fe-inner-background: #2E3134;
-    -fe-border: #616569;
-    -fe-body-text: #DCDCDC;
-    -fe-inner-text: #C2C2C3;
-
-    -fx-background-color: #2E3134;
+    -fe-body-background: #2c2f33;
+    -fe-inner-background: #23272a;
+    -fe-border: #676B6F;
+    -fe-body-text: #BBB;
+    -fe-inner-text: #FFF;
+    /*-font-family: 'Roboto';*/
+    -fx-background-color: #2c2f33;
     -fx-focus-color: #339797;
+    -dark-header: #23272a;
+    -gray-darker: #2c2f33;
+    -gray-dark: #2d2d2d;
+    -gray-one: #383838;
+    -gray-light: #444444;
+    -gray-lighter: #5c5c5c;
+    -text-primary: #FFF;
+    -text-secondary: #BBBBBB;
+    -text-disabled: derive(#FFF, -50%);
 }
-.derivation-root {
-    -fx-background-image: url("../images/dirtyshirt.png");
+#Derivation-Panel {
+    -fx-background-image: url("../images/bg.png");
 }
 .custom-menu-button {
     -fx-background-color: #31363B;
@@ -32,10 +41,10 @@ different terms and without source code for the larger work.
     -fx-border-width: -1;
 }
 .main-grid {
-    -fx-background-color: radial-gradient(center 35% 40%, radius 90%, rgba(255,255,255,0.3), rgba(255,255,255,0.05));
+    /*-fx-background-color: radial-gradient(center 35% 40%, radius 90%, rgba(255,255,255,0.3), rgba(255,255,255,0.05));*/
 }
 .prop-grid {
-    -fx-background-color: radial-gradient(center 35% 40%, radius 90%, rgba(68,68,68,0.8), rgba(68,68,68,0.05));
+    /*-fx-background-color: radial-gradient(center 35% 40%, radius 90%, rgba(68,68,68,0.8), rgba(68,68,68,0.05));*/
 }
 .split-pane-main {
     -fx-background-color: transparent;
@@ -62,39 +71,7 @@ different terms and without source code for the larger work.
 .css-text-area .scroll-pane .content {
     -fx-background-color: transparent;
 }
-.tab {
-    -fx-background-color: #131313;
-}
-.tab-pane:right .tab-header-area .tab-header-background {
-    -fx-background-color: #1C1C1C;
-}
-.tab:selected:right {
-    -fx-background-color: #2E3134;
-}
-.tab-pane:right .tab-header-area .headers-region .tab:right .tab-container .tab-label .text {
-    -fx-fill: #CDEFF1;
-}
-.tab-pane:top .tab-header-area .headers-region .tab .tab-container .tab-label .text {
-    -fx-fill: #CDEFF1;
-}
-.tab-pane:top .tab-header-area .headers-region .tab:selected:top .tab-container .tab-label .text {
-    -fx-fill: #CDEFF1;
-}
-.tab-pane:top .tab-header-area .tab-header-background {
-    -fx-background-color: transparent;
-}
-.tab-pane:top .tab-header-area .headers-region .tab:selected:top {
-    -fx-background-color: #2E3134;
-}
-.tab-pane:top .tab-header-area .headers-region .tab {
-    -fx-background-color: #2E3134;
-}
-.tab:selected:left {
-    -fx-background-color: #2A5058;
-}
-.tab-pane:left .tab-header-area .headers-region .tab:left .tab-container .tab-label .text {
-    -fx-fill: #CDEFF1;
-}
+
 .label {
     -fx-text-fill: white;
 }
