--- a/FXExperienceTools/src/main/resources/styles/gradient_panel.css
+++ b/FXExperienceTools/src/main/resources/styles/gradient_panel.css
@@ -1,39 +1,11 @@
-.root {
-    -fe-body-background: #31363B;
-    -fe-inner-background: #2E3134;
-    -fe-border: #616569;
-    -fe-body-text: #DCDCDC;
-    -fe-inner-text: #C2C2C3;
-
-    -fx-background-color: #2E3134;
-    -fx-focus-color: #339797;
+#Gradient-Panel {
+    -fx-background-image: url("../images/bg.png");
 }
+
 .label {
     -fx-text-fill: #C2C2C3;
 }
-.split-pane-main {
-    -fx-background-image: url("../images/dirtyshirt.png");
-}
-.custom-menu-button {
-    -fx-background-color: #31363B;
-    /*-fx-pref-width: 200;*/
-}
-.prop-title {
-    -fx-padding: 0;
-    -fx-border-width: -1;
-}
-.main-grid {
-    -fx-background-color: radial-gradient(center 35% 40%, radius 90%, rgba(255,255,255,0.3), rgba(255,255,255,0.05));
-}
-.prop-vbox {
-    -fx-background-color: radial-gradient(center 35% 40%, radius 90%, rgba(68,68,68,0.8), rgba(68,68,68,0.05));
-}
-.split-pane-main {
-    -fx-background-color: transparent;
-}
-.split-pane-divider {
-    -fx-background-color: #1C1C1C;
-}
+
 .color-picker .text {
     -fx-fill: #C2C2C3;
 }
@@ -41,7 +13,40 @@
     -fx-color: #282828;
     -fx-shadow-highlight-color: #323232;
 }
+/*******************************************************************************
+ * Popup Color Picker MenuButton 			                                   *
+ ******************************************************************************/
+.popup-pane {
+    -fx-background-color: -fe-body-background;
+    -fx-border-color: transparent;
+    -fe-focus-color: transparent;
+    -fx-padding: 0;
+}
+.custom-menu-button {
+    -fx-border-insets: -2;
+    -fx-background-insets: -2;
+}
+.custom-menu-button .arrow {
+    -fx-background-color: #7a8390;
+}
 
+.custom-menu-button {
+    -fx-background-color: -gray-darker;
+    -fx-border-color: -fe-border;
+    -fx-font-size: 0.875em;
+}
+
+.custom-menu-item:focused,
+.custom-menu-item:hover{
+    -fx-text-fill: -text-primary;
+    -fx-border-color: transparent;
+    -fe-focus-color: -gray-one;
+    -fx-background-radius: 1, 1, 1;
+}
+
+.custom-menu-button .label .text {
+    -fx-fill: -text-secondary;
+}
 .color-picker {
     -fx-text-fill: #333333;
     -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-inner-border, -fx-body-color;
@@ -69,7 +74,7 @@
     -fx-background-color: transparent;
 }
 .gradient-object {
-    -fx-font-family: "Helvetica Neue", "Lucida Grande", "sans-serif";
+    -fx-font-family: "Noto Sans";
     -fx-font-size: 20px;
     -fx-text-fill: #C2C2C3;
     -fx-background-radius: 20;
