--- a/FXExperienceTools/src/main/resources/styles/spline.css
+++ b/FXExperienceTools/src/main/resources/styles/spline.css
@@ -32,28 +32,33 @@ different terms and without source code for the larger work.
 }
 
 #SplineEditor {
-    -fx-background-image: url("../images/darkdenim.png");
-    -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.4) , 80, 0.0 , 0 , 0 );
+    -fx-background-image: url("../images/bg.png");
+    /*-fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.4) , 80, 0.0 , 0 , 0 );*/
 }
 
 .label {
-    -fx-text-fill: derive(#FFF, -30%);
+    -fx-text-fill: derive(#FFF, -10%);
     -fx-underline: true;
 }
 
 
 .animation-label {
-    -fx-font-family: "Roboto";
+    -fx-font-family: "Noto Sans";
     /*-fx-font-style: "Medium";*/
     -fx-font-size: 1.25em;
-    -fx-text-fill: derive(#FFF, -30%);
+    -fx-text-fill: derive(#FFF, -10%);
+
 }
 
 .code-text {
-    /*-fx-font-family: "Courier New";*/
+    -fx-font-family: "Monospaced";
     -fx-font-size: 18px;
-    -fx-text-fill: #FFF;
-    -fx-background-color: rgba(12, 12, 12, .2);
+    -fx-text-fill: #BCBCBC;
+    /*-fx-background-image: url("../images/navbg.png");*/
+    -fx-background-radius: 5px;
+    -fx-background-color: linear-gradient(from 100.0% 1.0% to 100.0% 100.0% ,
+        #804b4b 0.0% , #804b4b 1.0% , #694848 20.0% , #4d2121 84.0% , #4d2121 100.0% );
+    /*-fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.4) , 5, 0.0 , 0 , 5 );*/
 }
 
 .chart-plot-background {
