--- a/FXExperienceTools/src/main/resources/styles/style_panel_dark.css
+++ b/FXExperienceTools/src/main/resources/styles/style_panel_dark.css
@@ -33,17 +33,16 @@
     -fe-text-box-border: #676B6F;
 }
 
+#Content-Area {
+    -fx-background-image: url("../images/bg.png");
+}
+
 .button-hbox {
     -fx-background-color: #2c2f33;
 }
 .style-button {
     -fx-background-color: -fe-shadow-highlight-color, -fe-inner-border, -fe-inner-border, -fe-body-color;
 
-}
-
-.gradient-combo-box .list-view,
-.font-combo-box .list-view {
-    -fx-background-color: -fe-outer-border, -fe-control-inner-background;
 }
 
 .font-radio-button {
@@ -144,128 +143,6 @@
     -fx-background-color: transparent;
     -fx-padding: 0;
 }
-
-.gradient-combo-box .list-cell .text {
-    -fx-font-size: 0.8666em;
-    -fx-fill: -fe-body-text;
-}
-.gradient-combo-box .combo-box-popup .list-view .list-cell {
-    -fx-background-color: -fe-inner-background;
-    -fx-text-fill: -text-secondary;
-}
-
-.gradient-combo-box {
-    -fx-background-color: -fe-inner-background;
-    -fx-border-color: -fe-border;
-    /*-fx-border-color: -fe-border;*/
-    /*-fx-background-insets: 0;*/
-}
-.gradient-combo-box .arrow-button {
-    -fx-background-color: -fe-inner-background;
-    -fx-border-color: -fe-border;
-    /*-fx-border-color: transparent;*/
-    /*-fx-border-width: 0.2 .2 0.2 .2;*/
-    /*-fx-background-insets: 0;*/
-    /*-fx-border-insets: 1;*/
-}
-
-
-/*******************************************************************************
- *                                                                             *
- * Spinner                                                                     *
- *                                                                             *
- ******************************************************************************/
-
-.font-spinner {
-    -fx-background-color:
-            linear-gradient(to bottom, derive(-fe-border, -10%), -fe-border),
-            linear-gradient(from 0px 0px to 0px 5px, derive(-fe-inner-background, -9%), -fe-inner-background);
-    -fx-background-insets: 0, 1;
-    -fx-background-radius: 3, 2;
-}
-.font-spinner:focused,
-.font-spinner:contains-focus {
-    -fx-background-color: -fe-focus-color, -fe-border, -fe-body-background, -fx-faint-focus-color, -fe-body-color;
-    -fx-background-insets: -0.2, 1, 2, -1.4, 2.6;
-    -fx-background-radius: 3, 2, 1, 4, 1;
-}
-.font-spinner > .text-field {
-    -fx-background-color:
-            linear-gradient(to bottom, derive(-fe-border, -10%), -fe-border),
-            linear-gradient(from 0px 0px to 0px 5px, derive(-fe-inner-background, -9%), -fe-inner-background);
-    -fx-background-insets: 0, 1 0 1 1;
-    -fx-background-radius: 3 0 0 3, 2 0 0 2;
-}
-.font-spinner:focused > .text-field,
-.font-spinner:contains-focus > .text-field {
-    -fx-background-color:
-            -fe-inner-background,
-            -fx-faint-focus-color,
-            linear-gradient(from 0px 0px to 0px 5px, derive(-fe-inner-background, -9%), -fe-inner-background);
-    -fx-text-fill:  -fe-inner-text;
-    -fx-background-insets: 1 0 1 1, 1 0 1 1, 3 2 3 3;
-    -fx-background-radius: 2 0 0 2, 1 0 0 1, 0;
-}
-
-.font-spinner .increment-arrow-button {
-    -fx-background-color: -fe-border, -fe-border, -fe-body-background;
-    /*Change the two 0's here to -1 to get rid of the horizontal line */
-    -fx-background-insets: 0 0 -1 0, 1 1 0 1, 2 2 1 2;
-    -fx-background-radius: 0 3 0 0, 0 2 0 0, 0 1 0 0;
-    -fx-padding: 0.333335em 0.666667em 0.333335em 0.666667em;  /* 5 8 3 8 */
-}
-.font-spinner .decrement-arrow-button {
-    -fx-background-color: -fe-border, -fe-border, -fe-body-background;
-    -fx-background-insets: 0, 1 1 1 1, 1 2 2 2;
-    -fx-background-radius: 0 0 3 0, 0 0 2 0, 0 0 1 0;
-    -fx-padding: 0.333335em 0.666667em 0.333335em 0.666667em;  /* 3 8 5 8 */
-}
-.font-spinner:focused .increment-arrow-button,
-.font-spinner:contains-focus .increment-arrow-button,
-.font-spinner:focused .decrement-arrow-button,
-.font-spinner:contains-focus .decrement-arrow-button {
-    -fx-background-color: -fe-focus-color, -fe-body-background, -fx-faint-focus-color, -fe-body-background;
-}
-
-.font-spinner .increment-arrow-button .increment-arrow {
-    -fx-background-color: -fx-mark-highlight-color, -fx-mark-color;
-    -fx-background-insets: 0 0 -1 0, 0;
-    -fx-padding: 0.166667em 0.333333em 0.166667em 0.333333em;  /* 2 4 2 4 */
-    -fx-shape: "M 0 4 h 7 l -3.5 -4 z";
-}
-.font-spinner .decrement-arrow-button .decrement-arrow {
-    -fx-background-color: -fx-mark-highlight-color, -fx-mark-color;
-    -fx-background-insets: 0 0 -1 0, 0;
-    -fx-padding: 0.166667em 0.333333em 0.166667em 0.333333em; /* 2 4 2 4 */
-    -fx-shape: "M 0 0 h 7 l -3.5 4 z";
-}
-
-.font-spinner > .button:pressed > .left-arrow,
-.date-picker-popup > * > .spinner > .button:pressed > .right-arrow {
-    -fx-background-color: -fx-mark-highlight-color, derive(-fx-base,-55%);
-}
-
-/*-fx-background-color: ;*/
-/*-fx-border-color: #5c5c5c;*/
-/*-fx-text-fill: #E7E7E7;*/
-/*.font-spinner .increment-arrow-button,*/
-/*.font-spinner .decrement-arrow-button {*/
-    /*-fe-body-color: ladder(#5c5c5c, -fe-body-background 0%, #334455 100%);*/
-/*}*/
-
-/*.font-spinner .increment-arrow-button:hover,*/
-/*.font-spinner .decrement-arrow-button:hover {*/
-    /*!* interpolate color between yellow and red based on first color brightness *!*/
-    /*-fe-body-color: ladder(#5c5c5c, -fe-body-background 0%, #334455 100%);*/
-/*}*/
-
-/*.font-spinner  .increment-arrow-button:hover:pressed,*/
-/*.font-spinner .decrement-arrow-button:hover:pressed,*/
-/*.font-spinner  .increment-arrow-button:pressed,*/
-/*.font-spinner .decrement-arrow-button:pressed {*/
-    /*!* interpolate color between yellow and red based on first color brightness *!*/
-    /*-fe-body-color: ladder(#5c5c5c, -fe-body-background 0%, #334455 100%);*/
-/*}*/
 
 .slider-prop .track{
     -fx-background-color: -fe-inner-background;
@@ -394,13 +271,6 @@
     -fx-opacity: -fx-disabled-opacity;
 }
 
-/*.integer-field:focused {*/
-    /*-fx-background-color: -fe-inner-background;*/
-    /*-fx-background-insets: -0.2, 1, 2;*/
-    /*-fx-background-radius: 3.2, 2, 2;*/
-    /*-fx-border-radius: 2.2, 2, 2;*/
-/*}*/
-
 .properties-combo-box {
     -fx-background-color: -fe-inner-background;
     -fx-border-color: -fe-border;
@@ -511,6 +381,37 @@
     -fx-background-radius: 3px, 3px, 2px, 1px;
     -fx-padding: 0.333333em 0.666667em 0.333333em 0.666667em; /* 4 8 4 8 */
 }
+
+/*Drop down list*/
+.gradient-combo-box .list-view {
+    -fx-background-color: -fe-border, -fe-control-inner-background;
+}
+.gradient-combo-box .list-cell .text {
+    -fx-font-size: 0.8666em;
+    -fx-fill: -fe-body-text;
+}
+.gradient-combo-box .combo-box-popup .list-view .list-cell {
+    -fx-background-color: -fe-inner-background;
+    -fx-text-fill: -text-secondary;
+}
+.gradient-combo-box,
+.gradient-combo-box .combo-box-base {
+    -fx-background-color: -fe-shadow-highlight-color,
+    -fe-control-inner-background, -fe-border,  -fe-control-inner-background;
+}
+/*Make focus mirror size and color scheme as default*/
+.gradient-combo-box:focused,
+.gradient-combo-box .combo-box-base:focused {
+    -fx-background-color: -fe-shadow-highlight-color,
+    -fe-control-inner-background, -fe-border,  -fe-control-inner-background;
+    -fx-background-insets: 0 0 -1 0, 0, 1, 2;
+    -fx-background-radius: 3px, 3px, 2px, 1px;
+    -fx-padding: 0.333333em 0.666667em 0.333333em 0.666667em; /* 4 8 4 8 */
+
+}
+
+
+/*iiii*/
 
 /*Drop down list*/
 .family-combo-box .list-view {
