--- a/FXExperienceTools/src/main/resources/fxml/FXMLStylerPanel.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLStylerPanel.fxml
@@ -33,9 +33,11 @@
                <children>
                   <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="52.0" prefWidth="425.0" spacing="3.0" styleClass="button-hbox" AnchorPane.topAnchor="0.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#displayEditorPane" styleClass="style-button" text="CSS Editor" />
-                        <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#saveButtonAction" styleClass="style-button" text="Save CSS" />
-                        <Button layoutX="97.0" layoutY="10.0" mnemonicParsing="false" onAction="#copyButtonAction" styleClass="style-button" text="Copy CSS" />
+                        <Button fx:id="btnEditor" mnemonicParsing="false" onAction="#displayEditorPane" styleClass="style-button" text="CSS Editor">
+                           <graphic>
+                           </graphic></Button>
+                        <Button fx:id="btnSave" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#saveButtonAction" styleClass="style-button" text="Save CSS" />
+                        <Button fx:id="btnCopy" layoutX="97.0" layoutY="10.0" mnemonicParsing="false" onAction="#copyButtonAction" styleClass="style-button" text="Copy CSS" />
                      </children>
                   </HBox>
                   <StackPane fx:id="controlsPane" alignment="TOP_CENTER" minWidth="-Infinity" prefWidth="425.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="53.0">
@@ -66,7 +68,7 @@
                                                             <Insets />
                                                          </GridPane.margin>
                                                       </ToggleButton>
-                                                      <ToggleButton fx:id="baseTextToggle" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="24.0" prefWidth="52.0" styleClass="toggle-switch" text="AUTO" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                                                      <ToggleButton fx:id="baseTextToggle" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="24.0" prefWidth="52.0" styleClass="toggle-switch" text="AUTO" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                                          <font>
                                                             <Font name="SansSerif Bold" size="8.0" />
                                                          </font>
