--- a/FXExperienceTools/src/main/resources/styles/style_panel_dark.css
+++ b/FXExperienceTools/src/main/resources/styles/style_panel_dark.css
@@ -38,8 +38,7 @@
 }
 
 .button-hbox {
-    -fx-background-color: linear-gradient(from 100.0% 0.0% to 100.0% 100.0%,
-    derive(#23272a, 20%) 0.0%, derive(#23272a, 17%) 21.0%, derive(#23272a, 16%) 38.0%, derive(#23272a, 10%) 100.0%);
+-fx-background-color: #23272a;
 }
 .style-button {
     -fx-background-color: -fe-shadow-highlight-color, -fe-inner-border, -fe-inner-border, -fe-body-color;
