--- a/FXExperienceTools/src/main/resources/styles/code_area.css
+++ b/FXExperienceTools/src/main/resources/styles/code_area.css
@@ -1,5 +1,5 @@
 .code-area {
-    -fx-background-color: #2b2b2b;
+    -fx-background-image: url("../images/bg.png");
     -fx-highlight-fill: #253362;
 }
 
